syntax = "proto3";

option csharp_namespace = "OrderProcessing.Inventory.Grpc";

package product;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc UpdateProductStock (UpdateProductStockRequest) returns (UpdateProductStockResponse);
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  string product_id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message UpdateProductStockRequest {
  string product_id = 1;
  int32 quantity_change = 2;  
}

message UpdateProductStockResponse {
  bool success = 1;
  string message = 2;
}
